--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="./js/main.js" type="module"></script>
 </head>
 <body>
     <!-- <h1 id="demo">Hello</h1>
@@ -15,8 +16,17 @@
         <input type="text" id="in" onkeyup="grade()">
         <!-- <script src="./js/main.js"></script> -->
         <div class="container shadow rounded mt-3 p-3 bg-danger-subtle">
-            <div class="row g-4 row-cols-3" id="demo">
+            <button popovertarget="my-popover">Open Popover</button>
 
+            <div popover id="my-popover">Greetings, one and all!</div>
+            
+            <div class="row g-4 row-cols-3" id="demo">
+                <div class="input-group">
+                    <input type="number" name="" id="n1" onkeyup="sum()" class="form-control">
+                    <input type="number" name="" id="n2" onkeyup="sum()" class="form-control">
+                    <button class="btn btn-warning" onclick="sum()">+</button>
+                </div>
+                <h1 id="result"></h1>
             </div>
         </div>
         <div class="container mt-3">
@@ -35,6 +45,7 @@
                 </tbody>
             </table>
         </div>
-        <script src="./js/main.js"></script>
+
+        <!-- <script src="./js/main.js"></script> -->
 </body>
 </html>
